# Mahala

./: .gitignore  CLAUDE.md  Cargo.toml  MAHALA_METAVERSE_LUANTI_DOLIBARR.md  MAHALA_PROJECT_PLAN.md  PROJECT_STATUS.md  README.md  build.gradle  gradle.properties  pom.xml  settings.gradle
.github/: FUNDING.yml
blockchain/: Cargo.toml  README.md
blockchain/src/: block.rs  chain.rs  lib.rs  transaction.rs  wallet.rs
blockchain/src/consensus/: mod.rs  rvs.rs  vrf.rs
blockchain/src/crypto/: hash.rs  keys.rs  mod.rs  signatures.rs
blockchain/src/du/: calculator.rs  mod.rs
blockchain/src/nft/: contract.rs  mod.rs
blockchain/src/storage/: checkpoint.rs  merkle.rs  mod.rs
bridge/: Cargo.toml
bridge/src/: june_client.rs  main.rs  market_maker.rs  reserves.rs  security.rs
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
dolibarr-module/: README.md
dolibarr-module/mahala/class/: bridge_api.class.php  wallet.class.php
dolibarr-module/mahala/core/boxes/: mahala_wallet_box.php
dolibarr-module/mahala/core/modules/: modMahala.class.php
dolibarr-module/mahala/core/triggers/: interface_modMahala_MahalaTriggers.class.php
dolibarr-module/mahala/lib/: mahala.lib.php
dolibarr-module/mahala/sql/: llx_mahala_wallet.sql
ffi/: Cargo.toml
ffi/src/: lib.rs
full-node/: Cargo.toml
full-node/src/: config.rs  main.rs  mempool.rs  node.rs
full-node/src/api/: mod.rs  rest.rs
light-client/: Cargo.toml
light-client/src/: lib.rs  storage.rs  sync.rs  validator.rs
light-client/src/p2p/: mod.rs  protocol.rs
luanti-mods/: INSTALLATION.md  README.md  config_example.conf
luanti-mods/mahala_nft/: init.lua
luanti-mods/mahala_rental/: init.lua
luanti-mods/mahala_shop/: init.lua
luanti-mods/mahala_teleport/: init.lua
mobile/android/: README.md
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/com/mahala/: MahalaApplication.kt  MahalaCore.kt  MainActivity.kt
mobile/android/app/src/main/java/com/mahala/biometric/: BiometricManager.kt
mobile/android/app/src/main/java/com/mahala/ui/theme/: Theme.kt
mobile/android/app/src/main/java/com/mahala/validator/: ValidatorService.kt
mobile/android/app/src/main/java/com/mahala/wallet/: WalletScreen.kt  WalletViewModel.kt
mobile/android/app/src/main/res/values/: strings.xml  themes.xml
mobile/ios/: BUILD_INSTRUCTIONS.md  Info.plist  README.md
mobile/ios/Mahala/: MahalaApp.swift  MahalaCore.swift
mobile/ios/Mahala/Services/: BiometricService.swift  ValidatorService.swift
mobile/ios/Mahala/ViewModels/: WalletViewModel.swift
mobile/ios/Mahala/Views/: WalletView.swift
scripts/: build-mobile.sh  deploy-node.sh  setup-dev.sh
src/main/java/com/mahala/: MahalaNode.java
src/main/java/com/mahala/api/: ApiServer.java  CreateBusinessWalletRequest.java  CreatePersonalWalletRequest.java
src/main/java/com/mahala/blockchain/: TokenDistribution.java  Transaction.java
src/main/java/com/mahala/consensus/: RandomConsensus.java
src/main/java/com/mahala/crypto/: BiometricAuth.java
src/main/java/com/mahala/network/: P2PClientHandler.java  P2PMessage.java  P2PMessageListener.java  P2PNode.java  P2PServerHandler.java
src/main/java/com/mahala/wallet/: BusinessWallet.java  PersonalWallet.java  Wallet.java  WalletManager.java  WalletType.java
