[workspace]
members = [
    "blockchain",
    "light-client",
    "full-node",
    "ffi",
    "bridge",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mahala Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
blake3 = "1.5"
sha2 = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


