[package]
name = "mahala-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "mahala-bridge"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
mahala-blockchain = { path = "../blockchain" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true

# Web server
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"

# HTTP client pour June API
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
env_logger = "0.11"

# Config
config = "0.14"

# Hex encoding
hex = "0.4"
